<resources>
    <string name="app_name">Xently</string>
    <string name="default_currency" translatable="false">KES</string>

    <!-- Drawer menu labels -->
    <string name="drawer_menu_shops">Shops</string>
    <string name="drawer_menu_products">Products</string>
    <string name="drawer_menu_recommendation">Recommendation</string>

    <string name="toggle_drawer_visibility">%1$s drawer</string>
    <string name="toggle_password_visibility">%1$s password</string>
    <string name="generic_error_message">Sorry, an unexpected error was encountered.</string>
    <string name="empty_list">No %1$s added, yet!</string>
    <string name="stop_location_tracking_button_text">Stop tracking</string>
    <string name="show_screen_button_text">Show screen</string>
    <string name="location_tracking_notification_text">Tracking your location for better shop recommendation…</string>
    <string name="retry">Retry</string>
    <string name="request_permission_button_label">REQUEST PERMISSION</string>
    <string name="never_show_again_button_label">NEVER SHOW AGAIN</string>
    <string name="grant_button_label">GRANT</string>
    <string name="location_permission_rationale">Location service is important for effective shop recommendation by this app. Please grant the permission.</string>
    <string name="location_permission_rationale_minified">Please grant location access permission.</string>
    <string name="move_back">Move back</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="refresh">Refresh</string>
    <string name="none">None</string>
    <string name="text_field_content_description">%1$s text field</string>
    <string name="progress_bar_content_description">Progress bar</string>
    <string name="drawer_item_test_tag">Drawer item \"%1$s\" test tag</string>
    <string name="maximize_or_minimize_map">%1$s map</string>
    <string name="maximize">Maximize</string>
    <string name="minimize">Minimize</string>
</resources>