...
import androidx.compose.ui.text.input.TextFieldValue
import androidx.compose.ui.text.input.VisualTransformation
import androidx.compose.ui.unit.dp
import androidx.compose.ui.window.PopupProperties
import co.ke.xently.feature.R

const val TEST_TAG_TEXT_FIELD_ERROR = "Text field error"
const val TEST_TAG_TEXT_FIELD_HELP_TEXT = "Text field help text"
const val TEST_TAG_AUTOCOMPLETE_TEXT_FIELD_SUGGESTIONS =
    "TEST_TAG_AUTOCOMPLETE_TEXT_FIELD_SUGGESTIONS"

@Composable
fun stringRes(@StringRes string: Int, @StringRes vararg args: Int): String {
...
